syntax = "proto3";
package pb;

option go_package = "./;pb";

service DemoService {
  rpc SayHello (HelloRequest) returns (HelloResponse) {}
}

message HelloRequest {
  string name = 1;
}

message HelloResponse {
  string message = 1;
}

// protoc --go_out=./ --go-grpc_out=./ --proto_path=./ demo.proto